pages/main/elections_style.css
/* ... */
.Liberal_dot:hover, .Conservative_dot:hover, .Anti-Confederation_dot:hover,
.Vacant_dot:hover, .Independent_dot:hover, .Nationalist-Conservative_dot:hover,
.Patrons-of-Industry_dot:hover, .McCarthyite_dot:hover, .Green_dot:hover, .NDP_dot:hover,
.Bloq-Quebecois_dot:hover, .Labour_dot:hover, .Unionist_dot:hover, .Opposition_dot:hover, 
.United-Farmers-of-Alberta_dot:hover, .Progressive_dot:hover,
.United-Farmers-of-Ontario_dot:hover, .Liberal-Progressive_dot:hover,
.Social-Credit_dot:hover, .Co-operative-Commonwealth-Federation_dot:hover,
.Reconstruction-Party_dot:hover, .National-Government_dot:hover, .New-Democracy_dot:hover,
.United-Reform_dot:hover, .Progressive-Conservative_dot:hover, .Bloc-populaire_dot:hover,
.Labor-Progressive_dot:hover, .Liberal-Labour_dot:hover, .New-Democratic_dot:hover,
.Ralliement_dot:hover, .No-Affiliation_dot:hover {
    height: 1rem;
    width: 1rem;
    transition: all .5s ease;
}

@media only screen and (max-width: 600px) {
        .Liberal_dot, .Conservative_dot, .Anti-Confederation_dot,
.Vacant_dot, .Independent_dot, .Nationalist-Conservative_dot,
.Patrons-of-Industry_dot, .McCarthyite_dot, .Green_dot, .NDP_dot,
.Bloq-Quebecois_dot, .Labour_dot, .Unionist_dot, .Opposition_dot,
.Progressive_dot, .United-Farmers-of-Alberta_dot, 
.United-Farmers-of-Ontario_dot, .Liberal-Progressive_dot,
.Social-Credit_dot, .Co-operative-Commonwealth-Federation_dot,
.Reconstruction-Party_dot, .National-Government_dot, 
.New-Democracy_dot, .United-Reform_dot, .Progressive-Conservative_dot,
.Bloc-populaire_dot, .Labor-Progressive_dot, .Liberal-Labour_dot,
.New-Democratic_dot, .Ralliement_dot, .No-Affiliation_dot {
            height: 0.31rem;
            width: 0.31rem;
            margin: 0.03rem;
        }
        .first_row, .second_row, .third_row, .fourth_row,
.fifth_row, .sixth_row, .seventh_row, .eighth_row,
.ninth_row, .tenth_row, .eleventh_row, .twelfth_row,
.thirteenth_row, .speaker_row {
        margin-top: -10px;
    }

    #parliamentChart {
        margin-left: 6dvw;
        bottom: 5dvh;
    }

    .Liberal_dot:hover, .Conservative_dot:hover, .Anti-Confederation_dot:hover,
.Vacant_dot:hover, .Independent_dot:hover, .Nationalist-Conservative_dot:hover,
.Patrons-of-Industry_dot:hover, .McCarthyite_dot:hover, .Green_dot:hover, .NDP_dot:hover,
.Bloq-Quebecois_dot:hover, .Labour_dot:hover, .Unionist_dot:hover, .Opposition_dot:hover,
.United-Farmers-of-Alberta_dot:hover, .Progressive_dot:hover,
.United-Farmers-of-Ontario_dot:hover, .Liberal-Progressive_dot:hover,
.Social-Credit_dot:hover, .Co-operative-Commonwealth-Federation_dot:hover,
.Reconstruction-Party_dot:hover, .National-Government_dot:hover,
.New-Democracy_dot:hover, .United-Reform_dot:hover, .Progressive-Conservative_dot:hover,
.Bloc-populaire_dot:hover, .Labor-Progressive_dot:hover, .Liberal-Labour_dot:hover,
.New-Democratic_dot:hover, .Ralliement_dot:hover, .No-Affiliation_dot:hover {
            height: 0.5rem;
            width: 0.5rem;
        }

    .fifth_row, .fourth_row, .third_row, .second_row, .first_row, .sixth_row,
.thirteenth_row, .twelfth_row, .eleventh_row, .tenth_row, .ninth_row,
.eighth_row, .seventh_row {
    margin-left: 0.5rem;
}

    #searchResults {
        top: 21dvh;
        left: 1dvh;
        max-height: 20dvh;
    }

    .results-table {
        max-width: 30dvh;
        font-size: xx-small; /* VERIFY THAT THIS IS NOT TOO SMALL */
    }

    #ridingHeader {
        font-size: x-small; /* VERIFY THAT THIS IS NOT TOO SMALL */
    }

    th, td {
        padding: 0.25rem;
    }

    .results-table thead, .results-table th {
        position: sticky;
        top: 12.5%;
    }

    }

